js/js.translator/testData/incremental/invalidation/splitJoinModule/lib2/l2.0.kt
fun qux() = fooA() + fooB() + fooC() - 6
